foundation-objs/main/default/objects/Asset_KAM_Details__c/Asset_KAM_Details__c.object-meta.xml
<CustomObject>
    <label>Asset KAM Details</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset KAM Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>