foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset KAM Details</relationshipLabel>
    <relationshipName>Asset_KAM_Details</relationshipName>
    <type>Lookup</type>
</CustomField>