foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/Ageing_Till_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Till_Period_End_Date__c</fullName>
    <formula>Asset__r.UsageEndDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing (Till Period End Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>