foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/CSM_KAM_handover__c.field-meta.xml
<CustomField>
    <fullName>CSM_KAM_handover__c</fullName>
    <label>CSM-KAM handover</label>
    <type>Date</type>
</CustomField>