foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/KAM_Handover_criteria__c.field-meta.xml
<CustomField>
    <fullName>KAM_Handover_criteria__c</fullName>
    <description>Please select all the criteria that have been met</description>
    <label>KAM Handover criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding completed</fullName>
            </value>
            <value>
                <fullName>Integration completed</fullName>
            </value>
            <value>
                <fullName>Aging &gt; 90 days</fullName>
            </value>
            <value>
                <fullName>Last usage present after 1st of last month</fullName>
            </value>
            <value>
                <fullName>1st usage and last usage date are not the same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>