foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/MS_Absolute_contribution__c.field-meta.xml
<CustomField>
    <fullName>MS_Absolute_contribution__c</fullName>
    <label>MS Absolute contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>