foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/MS_Absolute_contribution_Calculated__c.field-meta.xml
<CustomField>
    <fullName>MS_Absolute_contribution_Calculated__c</fullName>
    <formula>IF ((MS_Contribution__c &gt; 0 ), (MS_Contribution__c * Asset__r.Price),0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MS Absolute contribution (Calculated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>