foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/MS_Asset__c.field-meta.xml
<CustomField>
    <fullName>MS_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS Asset?</label>
    <type>Checkbox</type>
</CustomField>