foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/Risk_Status_by_KAM__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status_by_KAM__c</fullName>
    <label>Risk Status by KAM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>