foundation-objs/main/default/objects/Asset_KAM_Details__c/fields/Risk_update_from_Category_KAM__c.field-meta.xml
<CustomField>
    <fullName>Risk_update_from_Category_KAM__c</fullName>
    <label>Risk update from Category / KAM</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>